[gd_scene load_steps=12 format=3 uid="uid://dmbxgjgsxf7k5"]

[ext_resource type="Script" uid="uid://b01lki748a2ko" path="res://scripts/boss_dino.gd" id="1_pk0b6"]
[ext_resource type="Texture2D" uid="uid://d1lkpsv83dowf" path="res://assets/characters/DinoSprites - mort.png" id="2_gdlov"]
[ext_resource type="PackedScene" uid="uid://c8m1r23w5tydn" path="res://scenes/killzone.tscn" id="3_7aj1s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_18fiq"]
atlas = ExtResource("2_gdlov")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayhyd"]
atlas = ExtResource("2_gdlov")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctwje"]
atlas = ExtResource("2_gdlov")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn18o"]
atlas = ExtResource("2_gdlov")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ehva7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18fiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayhyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctwje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn18o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mf81q"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1u27b"]
size = Vector2(9, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3rah"]
size = Vector2(14, 3)

[node name="BossDino" type="Area2D"]
collision_mask = 2
script = ExtResource("1_pk0b6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ehva7")
autoplay = "default"
frame_progress = 0.0403517

[node name="HeadStomp" type="CollisionShape2D" parent="."]
position = Vector2(2, -5.5)
shape = SubResource("RectangleShape2D_mf81q")

[node name="Killzone" parent="." instance=ExtResource("3_7aj1s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_1u27b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
position = Vector2(2, -1.5)
shape = SubResource("RectangleShape2D_v3rah")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)
collision_mask = 5

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)
collision_mask = 5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
